2004-03-12  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport:
	2004-03-08  Mark Mitchell  <mark@codesourcery.com>
	PR c++/14401
	* class.c (check_field_decls): Complain about non-static data
	members of reference type in unions.  Propagate
	CLASSTYPE_REF_FIELDS_NEED_INIT and
	CLASSTYPE_READONLY_FIELDS_NEED_INIT from the types of non-static
	data members.
	* init.c (perform_member_init): Complain about members with const
	type that are not explicitly initialized.

2004-03-12  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport:
	2004-03-09  Mark Mitchell  <mark@codesourcery.com>
        PR c++/14230
        * call.c (initialize_reference): Handle initializers that are
        class-member access expressions applies to rvalues.

2004-03-12  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport:
	2004-01-12  Richard Henderson  <rth@redhat.com>
	PR opt/10776
	* typeck2.c (split_nonconstant_init_1, split_nonconstant_init): New.
	(store_init_value): Use it.
	* decl.c (check_initializer): Expect full initialization code
	from store_init_value.
	* init.c (expand_aggr_init_1): Likewise.
	* decl2.c (maybe_emit_vtables): Abort if runtime init needed.

2004-03-09  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/14409
	* pt.c (determine_specialization): For member templates, match also
	constness.

2004-03-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport:
	2004-02-04  Mark Mitchell  <mark@codesourcery.com>

	PR c++/9941
	* rtti.c (tinfo_base_init): Use import_export_tinfo to decide the
	linkage for the typeinfo name string.

2004-02-24  Jason Merrill  <jason@redhat.com>

	PR c++/13944
	* except.c (do_free_exception): Remove #if 0 wrapper.
	(build_throw): Use it if we elide a copy into the exception object.

2004-03-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* decl.c (current_binding_level): Define as an lvalue.

2004-02-23  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/13635